-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
lnetctl net show reports local NI status via ni->ni_status unless the fatal bit is set. When a link-down event marks a local NI "down", clearing
ni_fatal_error_on on link recovery does not necessarily restore the
cached NI status to UP.
This can leave a local NI reported as DOWN.
Restore the exported NI status to "UP" when clearing the fatal link state
for a fully healthy NI, and push the update to peers if the status
changed.