LU-20093 lnet: restore local NI status on link up

Restore the exported NI status to "up" when clearing
the fatal link state for a fully healthy NI, push
the update to peers if the status changed. This avoids
local NI getting stuck with "down" status.

Test-Parameters: trivial testlist=sanity-lnet
Signed-off-by: Serguei Smirnov <ssmirnov@thelustrecollective.com>
Change-Id: I34e672c555499bd8c6284a303f0e9447bb1bb867
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65154
Reviewed-by: Cyril Bordage <cbordage@whamcloud.com>
Reviewed-by: Minh <mdiep@thelustrecollective.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>